--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,25 +1,33 @@
-name: Update README
+name: Update README with LeetCode Rank and Quote
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # every day at midnight UTC
+    - cron: "0 0 * * *"  # every day at midnight UTC
   workflow_dispatch:
 
 jobs:
   update-readme:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Update README
-        run: |
-          TIME=$(date +"%Y-%m-%d %H:%M:%S")
-          sed -i "s/{{TIME}}/$TIME/g" README.md
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
 
-      - name: Commit changes
+      - name: Install dependencies
+        run: pip install requests
+
+      - name: Run Python script
+        run: python update.py
+
+      - name: Commit and push changes
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add README.md
-          git commit -m "Updated time to $TIME" || echo "No changes"
+          git commit -m "Update LeetCode rank and quote" || echo "No changes"
           git push
