--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -33,4 +33,5 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add README.md
           git commit -m "Update LeetCode rank and quote" || echo "No changes"
+          git pull --rebase
           git push
